message( STATUS "SRC is here" )

add_subdirectory(/home/ali/ceph-local/src/cls/rbd)

message( STATUS "rbd is here" )

add_subdirectory(/home/ali/ceph-local/src/cls/refcount)

message( STATUS "refcount is here" )

add_subdirectory(/home/ali/ceph-local/src/cls/rgw)

message( STATUS "rgw is here" )

add_subdirectory(/home/ali/ceph-local/src/cls/lock)

message( STATUS "lock is here" )
